--- a/CSS/themes/radarr/radarr-base.css
+++ b/CSS/themes/radarr/radarr-base.css
@@ -365,8 +365,7 @@ a:hover {
     color: var(--text-hover);
 }
 
-[class*="Label-default-"],
-[class*="Label-inverse-"] {
+[class*="Label-default-"] {
     border-color: var(--accent-color);
     background-color: var(--accent-color);
     color: #fff;
